# auth0-cli

./: .gitignore  Cargo.toml  README.md  install.sh
src/: auth0_api.rs  config.rs  main.rs  user.rs
