[package]
name = "auth0-cli"
version = "0.1.0"
authors = ["Loughlin Fox <loughlinjfox@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
clap = "~2.32"
prettytable-rs = "^0.8"
jsonwebtoken = "5"
crossbeam = "0.7.1"
toml = "0.4"
ansi_term = "0.11.0"
dirs = "1.0.5"